Fix invisible identifiers in class declarations.

--- a/website/themes/uppy/source/css/_syntax.scss
+++ b/website/themes/uppy/source/css/_syntax.scss
@@ -37,7 +37,7 @@ pre {
   }
 
   .class .title {
-    color: white;
+    color: #2973b7;
   }
 
   .symbol,
